force-app/main/default/objects/Scholarship__c.object
<CustomObject>
    <description>Captures details of all the scholarships issued to a particular school</description>
    <fields>
        <fullName>Alias__c</fullName>
        <description>The name of record migrated from source org</description>
        <externalId>true</externalId>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Issued__c</fullName>
        <description>The number of this scholarship that were issued for this year and this School</description>
        <label>Number Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scholarship_Name__c</fullName>
        <description>Captures the name of the scholarship</description>
        <label>Scholarship Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sir John Monash Scholarship</fullName>
                </value>
                <value>
                    <fullName>Monash Indigenous Scholarship for Achievement and Equity</fullName>
                </value>
                <value>
                    <fullName>Monash Indigenous Pathway Bursary</fullName>
                </value>
                <value>
                    <fullName>Colin and Eleanor Bourke Indigenous Postgraduate Scholarship</fullName>
                </value>
                <value>
                    <fullName>MRS Residential Indigenous Leadership Pathway Scholarship</fullName>
                </value>
                <value>
                    <fullName>Commonwealth Education Costs Scholarship (CECS)</fullName>
                </value>
                <value>
                    <fullName>Commonwealth Accommodation Scholarship (CAS)</fullName>
                </value>
                <value>
                    <fullName>Commonwealth Indigenous Access Scholarship</fullName>
                </value>
                <value>
                    <fullName>Monash Scholarship for Exceptional Achievement</fullName>
                </value>
                <value>
                    <fullName>Monash Scholarship for Outstanding Achievement</fullName>
                </value>
                <value>
                    <fullName>Information Technology Indigenous Achievement Scholarship</fullName>
                </value>
                <value>
                    <fullName>Information Technology Indigenous Merit Scholarship</fullName>
                </value>
                <value>
                    <fullName>Faculty of IT Indigenous Non-Award Pathway Bursary</fullName>
                </value>
                <value>
                    <fullName>Faculty of IT Indigenous Study Support Bursary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <description>Captures the school to which scholarship was issued</description>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scholarships</relationshipLabel>
        <relationshipName>Scholarships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Captures the year for which the scholarship was issues</description>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Scholarship</label>
    <nameField>
        <displayFormat>SCH-{00000}</displayFormat>
        <label>Scholarship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scholarships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>